# cms_parser_package

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/cms_parser/: __init__.py  main.py  parser.py
src/cms_parser/output/: TableVI-1.csv  TableVI-2.csv  TableVI-3.csv
tests/: test_CMSParser.py
